<resources>
    <!-- Activity 7 -->
    <string name="app_name">Clock</string>
    <string name="utility_code">Комунальний код</string>
    <string name="utilities">Комунальні послуги</string>
    <string name="add_string_text">Додайте адресу</string>
    <string name="tab_utility_code">Назва об\'єкту</string>
    <string name="address">Адреса</string>
    <string name="apartment">Квартира</string>
    <string name="private_house">Приватний будинок</string>
    <string name="add_utility_code">Додати комунальний код</string>
    <string name="delete_utility_code">Видалити комунальний код</string>
    <string name="order_utility_code">Замовити комунальний код</string>
    <string name="about_deleting">Для видалення адреси проведіть вправо на вибраному пункті. </string>
    <string name="icon">icon</string>
    <string name="city">Місто</string>
    <string name="lviv">Львів</string>
    <string name="lviv_watter">Львівводоканал</string>
    <string name="lviv_heat">Львівтеплоенерго</string>
    <string name="lviv_electricity">Львівенерго</string>
    <string name="green_era">GreenEra</string>
    <string name="lviv_elevator">Львів-Еко</string>
    <string name="lviv_gas">ЛьвівГаз</string>
    <string name="lviv_intercom">Оберіг</string>
    <string name="lviv_osbb">ОСББ</string>
    <string name="sign_up">Зареєструватись</string>
    <string name="sign_in">Увійти</string>
    <string name="name_of_user">Ім\'я користувача*</string>
    <string name="email">Email*</string>
    <string name="phone_number">Телефон*</string>
    <string name="password">Пароль*</string>
    <string name="repeat_password">Повторити пароль*</string>
    <string name="registration">Реєстрація</string>
    <string name="loss_pass">Забули пароль?</string>
    <string name="login_or_email">Логін/Email</string>
    <string name="password_sign_in">Пароль</string>
    <string name="building_number">Номер будинку</string>

</resources>