<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/rectangle_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_utility_code"
        style="@style/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/utility_code"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accounts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/recycler_view_style"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_utility_code" />

    <EditText
        android:id="@+id/name_utility_bill_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/tab_utility_code"
        android:background="@drawable/edit_text_stroke"
        android:drawableStart="@drawable/credit_card"
        android:hint="@string/tab_utility_code"
        android:padding="16dp"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accounts_recycler_view" />

    <EditText
        android:id="@+id/address_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/address"
        android:background="@drawable/edit_text_stroke"
        android:drawableStart="@drawable/frame"
        android:hint="@string/address"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_utility_bill_edt" />

    <EditText
        android:id="@+id/apartment_number_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/apartment"
        android:background="@drawable/edit_text_stroke"
        android:drawableStart="@drawable/key"
        android:hint="@string/apartment"
        android:inputType="number"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_edt" />

    <CheckBox
        android:id="@+id/checkbox_ph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/private_house"
        app:layout_constraintStart_toStartOf="@id/apartment_number_edt"
        app:layout_constraintTop_toBottomOf="@+id/apartment_number_edt" />

    <Button
        android:id="@+id/add_utility_code_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/good_button"
        android:text="@string/add_utility_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_ph" />

    <Button
        android:id="@+id/delete_code_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/warning_button"
        android:text="@string/delete_utility_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_utility_code_btn" />

    <Button
        android:id="@+id/order_code_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:text="@string/order_utility_code"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>