<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <View
        android:id="@+id/logo_background"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        app:layout_constraintTop_toTopOf="@id/logo_background"
        app:layout_constraintStart_toStartOf="@id/logo_background"
        app:layout_constraintEnd_toEndOf="@id/logo_background"
        app:layout_constraintBottom_toBottomOf="@id/logo_background"/>
    
    <EditText
        android:id="@+id/sign_in_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/login_or_email"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:padding="16dp"
        android:background="@drawable/edit_text_stroke"
        app:layout_constraintTop_toBottomOf="@+id/logo_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:password="true"
        android:id="@+id/sign_in_password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password_sign_in"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:padding="16dp"
        android:background="@drawable/edit_text_stroke"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_name_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/good_button"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password_edt"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"/>

    <View
        android:id="@+id/background_loss_pass"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@drawable/rectangle_loss_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_loss_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loss_pass"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/background_loss_pass"
        app:layout_constraintStart_toStartOf="@id/background_loss_pass"
        app:layout_constraintEnd_toEndOf="@id/background_loss_pass"
        app:layout_constraintBottom_toBottomOf="@id/background_loss_pass"/>

</androidx.constraintlayout.widget.ConstraintLayout>